--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
     body.dark-mode .keywords {
       color: #ffffff;
     }
+    .fun-fact {
+      background-color: #f0f8ff;
+      border-left: 5px solid #4682b4;
+      padding: 15px;
+      margin-top: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s, color 0.3s;
+    }
+    body.dark-mode .fun-fact {
+      background-color: #1e2a3a;
+      border-left-color: #6495ed;
+    }
+    .fun-fact h3 {
+      margin-top: 0;
+      color: #4682b4;
+    }
+    body.dark-mode .fun-fact h3 {
+      color: #6495ed;
+    }
   </style>
 </head>
 
@@ -129,6 +149,10 @@
                 <p>Before that I was a research masters student at <a href="https://mila.quebec/en/" target="_blank">MILA</a>, University of Montreal, under supervision of <a href="https://liampaull.ca" target="_blank">Professor Liam Paull</a>, where I mainly worked on Probabilistic object detection. I worked on trustworthy uncertainty estimation for my thesis, which got accepted to ICRA 2022. I also worked on identifying flaws of existing set of probabilistic object detectors, which got published as a position paper at ICML 2020. Before coming to MILA, I did MS in Robotics with Prof Madhav Krishna, and worked on many things including self driving cars and autonomous drones.</p>
 
                 <p>When I am not working, I am either brainstorming new ideas with ChatGPT or watching some political documentary. 😉 I have recently discovered my love for AI assisted coding, and stock markets. I do options trading on the side. During weekends, I am either coding using Cursor, or doing technical analysis on trading view, or bowling with some friends.</p>
+              </div>
+              <div class="fun-fact">
+                <h3>🎨 Fun Fact</h3>
+                <p>The profile picture you see on this website is not a real photograph! I fine-tuned Flux1-dev on just 17 images of myself and generated this image. Curious about the process? <a href="https://www.linkedin.com/posts/dhaivat1729_last-few-days-i-was-working-on-finetuning-activity-7239748672584884225-67Uz/?utm_source=share&utm_medium=member_ios" target="_blank">Check out the details here</a>.</p>
               </div>
             </div>
           </div>
