--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <article class="post-content clearfix">
           <div class="profile">
             <div class="profile-pic-container" style="width: 200px; height: 200px; display: flex; justify-content: center; overflow: hidden; border-radius: 50%;">
-              <img class="profile-pic" src="/assets/img/profilepic.jpg" alt="Dhaivat Bhatt" style="width: 100%; height: auto; object-fit: cover; object-position: center;">
+              <img class="profile-pic" src="/assets/img/profile_pic.jpg" alt="Dhaivat Bhatt" style="width: 100%; height: auto; object-fit: cover; object-position: center;">
             </div>
             <div class="profile-info">
               <div class="social">
