Visible link colors in dark mode

--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
     body.dark-mode .fun-fact h3 {
       color: #6495ed;
     }
+    /* New styles for links in dark mode */
+    body.dark-mode .profile-description a,
+    body.dark-mode .fun-fact a {
+      color: #4da3ff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    body.dark-mode .profile-description a:hover,
+    body.dark-mode .fun-fact a:hover {
+      color: #80bdff;
+    }
   </style>
 </head>
 
